# IV_team_mpit_2026

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx-prod.conf
backend/: .env.example  Dockerfile  pyproject.toml
backend/config/: semantic_layer.yaml
backend/scripts/: dev_setup.sh  eval_golden.py  import_csv.py  init_db.sql  seed_data.py
backend/src/askdata/: config.py  main.py
backend/src/askdata/audit/: models.py  routes.py  service.py
backend/src/askdata/auth/: deps.py  models.py  routes.py  service.py
backend/src/askdata/chat/: models.py  routes.py  service.py
backend/src/askdata/dashboards/: models.py  routes.py
backend/src/askdata/db/: meta.py  target.py
backend/src/askdata/query/: pipeline.py  preprocessor.py  prompt_builder.py  router.py  routes.py  validator.py  validator_agent.py  visualizer.py
backend/src/askdata/query/llm/: claude.py  gigachat.py  local.py  provider.py
backend/src/askdata/query/templates/: base.py  catalog.py
backend/src/askdata/rag/: routes.py  store.py
backend/src/askdata/reports/: models.py  routes.py
backend/src/askdata/schedules/: models.py  routes.py  scheduler.py
backend/src/askdata/semantic/: loader.py  models.py  routes.py
backend/src/askdata/telegram/: bot.py
backend/src/askdata/voice/: routes.py
backend/tests/: golden_questions.yaml  test_validator.py
frontend/: Dockerfile.prod  index.html  nginx-prod-inner.conf  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  dashboards.ts  query.ts  (+3 more)
(+25 files in other folders)
